2006-12-08
	* email2trac.py:
	  - Added verbatim_format option default is: 1
	  Added by : Bas van der Vlies

	  - Added strip_signature option default is: 0 
	  Added by : Bas van der Vlies

	  - Fixed some unicode errors, thanks to japanes SPAM. 
	    If we can not unicode email message then display which
	    charset must be installed in ticket description. Else we 
	    trac crashed with unicode errors ;-(
	  Fixed by: Bas van der Vlies

	  - Fixed statements: str + unicode, raises an exception if 
	    non-ascii value in unicode object.

	  - Forgot to unicode the author. So we got an error if we use 
	    the mailto_link option in email2trac.conf. 
	  Fixed by: Bas van der Vlies

	* delete_spam.py:
	  - Now works for version 0.10 with new API-functions
	  Fixed by: Bas van der Vlies

	* Makefile.in
	  - Added install-conf. Install email2trac.conf if there is none
	    installed.
	  Fixed by: Bas van der Vlies

2006-10-27

	* run_email2trac.c. 
	
	  - Setgid() must be called before setuid().
	  Reported by:  Anonymous
	  Fixed    by:  Bas van der Vlies

	* email2trac.py, 
	
	  - Fixed an error in Ticket Update. When ticket
	  does not exists, proceed as if it is a new ticket
	  Fixed    by:  Bas van der Vlies

	  - Fixed a strang bug in 0.9 version, if ticket update 
	  is enabled and email has attachment(s). We are not allowed to 
	  set the description and author field of the attachment else 
	  the comment text is lost ;-(
	  Fixed    by:  Bas van der Vlies

	  - Fixed an error if enable_syslog and drop_spam is set. We get
	  an exception in the syslog if we use sys.exit(0), replaced by
	  return.
	  Fixed    by:  Bas van der Vlies

	* delete_spam.py. 
	
	  - Trac version 0.10 made it easier to delete tickets.
	  Fixed    by:  Bas van der Vlies
	
2006-10-10
	* Fixed race conditions in delete_spam.py and added some 
	  debug code.
	  Fixed by   : Bas van der Vlies

	* Added author and description field when attachment is