@@ -1,3 +1,9 @@
+2007-03-08 Michel Jouvin <jouvin@lal.in2p3.fr>
+        * email2trac.py : blacklist (don't create ticket) mail from
+	  MAILER-DAEMON to avoid loops
+	* msg.bad.txt : add an example of message from MAILER-DAEMON
+
+
 2006-12-08
 	* email2trac.py:
 	  - Added verbatim_format option default is: 1
